@@ -1,3 +1,7 @@
+Wed May  7 16:22:59 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* ciao/Container_Base.cpp: Fixed warnings with gcc.
+
 Tue May  6 12:47:26 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* examples/handcrafted/Display/NavDisplayGUI_exec/NavDisplayEIC.cpp:
